Подлкючение функционала телеграм бота
